<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    app:statusBarBackground="@android:color/background_light"
    tools:context="com.ryatec.syspalma.Apontamento">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_light"
            app:subtitleTextColor="@color/colorGreen"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorGreen">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:layout_weight="1"
            app:tabTextAppearance="@style/AppTabTextAppearance">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/mapa_apontamento"
                android:text="@string/tab_novo_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_lista"
                android:text="@string/tab_novo_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_if_tractor"
                android:text="@string/tab_novo_4" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_lista"
                android:text="@string/tab_novo_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:theme="@style/AppTabLayout"
            app:itemTextColor="@color/colorGreen"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/menu_bottom_navigation" />

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:addStatesFromChildren="true"
            android:background="@android:color/background_light"
            android:duplicateParentState="false" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>